--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">LocationHack</string>
     <string name="action_settings">Settings</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
