--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="register_here"><u>Register here</u></string>
 </resources>
