--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="register_here"><u>Register here</u></string>
+    <string name="title_activity_maps">Map</string>
 </resources>
